[project]
name = "librechat"
description = "ChatGPT"
authors = [{name= "Dave", email = "pengbo@featurize.ai"}]
version = "1.0.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/pengbo0054/featurize-librechat"
Documentation = "https://github.com/pengbo0054/featurize-librechat/blob/main/README.md"
Repository = "https://github.com/pengbo0054/featurize-librechat"
Changelog = "https://github.com/pengbo0054/featurize-librechat/blob/main/CHANGELOG.md"
Issues = "https://github.com/pengbo0054/featurize-librechat/issues"

[featurize]
port = "25735"
op_port = "35971"
icon = "https://github.com/danny-avila/LibreChat/raw/main/client/public/assets/logo.svg"
author_github = "https://github.com/pengbo0054"
name = "ChatGPT"
newtab = false